--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,46 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>EasyRetention</title>
+  <link rel="stylesheet" media="all" href="assets/application-6391dd42ab241066df8be6b101f0c4b2769dbbb9e3edcc01811268b99662c7d5.css" data-turbolinks-track="true" />
+  <script src="assets/application-744feb58c517097a41b7e0e121dd6e8316249f645d49af1e203d3164794489e5.js" data-turbolinks-track="true"></script>
+
+  <meta name="description" content="Re-engage your lost customers on Stripe.">
+  <meta name="keywords" content="stripe, saas, retention, churn rate" />
+  <link rel="shortcut icon" type="image/png" href="ER_twitter.png"/>
+
+  <!-- Viewport meta -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="EasyRetention.com">
+
+  <!-- OpenGraph Meta -->
+  <meta property="og:site_name" content="EasyRetention"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:description" content="Re-engage your lost customers on Stripe."/>
+  <meta property="og:url" content="http://www.easyretention.com"/>
+  <meta property="og:title" content="EasyRetention - The sexy way to re-engage your lost customers."/>
+  <meta property="og:image" content="ER_twitter.png"/>
+  
+  <!-- IE Fix for HTML5 Tags -->
+  <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+
+  <script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-3818856-15', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
+  <meta name="csrf-param" content="authenticity_token" />
+<meta name="csrf-token" content="dzmkMd3wtMzxTfKInYP8642pjrAGwelMhAJfoT+oBRhL6hc3vZ/08k2lMHXMe/oaQVrOwHifq/2jHzSMW5GB3w==" />
 </head>
 <body>
 
