Table nearly complete

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,6 +15,8 @@
 .pricing-table {
   border: 1px solid #ced7df;
   border-radius: 3px;
+  padding-bottom: 579px;
+  background: #fefefe;
   box-sizing: border-box;
 }
 
@@ -22,7 +24,6 @@
   width: 33.33%;
   box-sizing: border-box;
   float: left;
-  background: #fefefe;
   border-right: 1px solid #f4f7f9;
   position: relative;
   z-index: 1;
@@ -106,7 +107,7 @@
 }
 
 .pricing-table-column:nth-of-type(3) {
-  background: #fff;
+	background: #fff;
   box-shadow: 1px 0 2px rgba(0,0,0,.05);
   position: relative;
   z-index: 3;
@@ -208,7 +209,40 @@ a:hover {
   margin-top: 10px;
   margin-bottom: 50px;
   text-align: left;
-}3
+}
+
+.features1 ul {
+	font-size: 14px;
+  	text-align: left;
+  	list-style-type: none;
+}
+
+
+.features2 ul {
+	font-size: 14px;
+  	text-align: left;
+  	list-style-type: none;
+}
+
+.features3 ul {
+	font-size: 14px;
+  	text-align: left;
+  	list-style-type: none;
+}
+
+.features1 {
+  padding-bottom: 81px;
+  border-bottom: 1px solid #f4f7f9;
+}
+
+.features2 {
+  padding-bottom: 42px;
+  border-bottom: 1px solid #f4f7f9;
+}
+
+.features3 {
+  border-bottom: 1px solid #ced7df;
+}
 
 </style>
 
@@ -249,7 +283,7 @@ a:hover {
 			<div class="pricing-table-column" style=" width: 25%">
 					<div class="pricing-cell pricing-cell-header">
 						<h3><strong>Basic</strong></h3>
-						<p>Best for the casual meetup events, who plan events in advance</p>
+						<p>Best for the casual product explorer.</p>
 						<div class="pricing-table--price"><span>Free</span></div>
 						<br><br>
 						<a class="btn btn-default" href="#" role="button">Start Your Free 14-Day Trial</a>
@@ -262,20 +296,13 @@ a:hover {
 					<div class="pricing-cell">
 						<h4><span>1</span> Events a month</h4>
 					</div>
-				
-					<div class="pricing-cell">
-						
+					
+					<div class="features1">
 						<ul>
-							<li><i class="tooltip-top" data-tooltip="Schedule as many posts as you need with Buffer for Business. No more queue limits means less time managing your social media schedule!">+</i><span>50</span> Profile
-
-							<li><i class="tooltip-top" data-tooltip="Schedule as many posts as you need with Buffer for Business. No more queue limits means less time managing your social media schedule!">+</i><span>300</span> total emails a month
-							</li>
+							<li><p>Manage up to <span>50</span> profiles</p></li>
+							<li><p><span>300</span> email credits per month</p></li>
 						</ul>
-						
-
 					</div>
-
-			
 
 			</div>
 							
@@ -285,7 +312,7 @@ a:hover {
 			<div class="pricing-table-column" style=" width: 25%">
 					<div class="pricing-cell pricing-cell--header">
 						<h3><strong>Planner</strong></h3>
-						<p>Best for the casual meetup events, who plan events in advance</p>
+						<p>Best for the casual meetup events.</p>
 						<div class="pricing-table--price"><span>$49</span> per month</div>
 						<br><br>
 						<a class="btn btn-default" href="#" role="button">Start Your Free 14-Day Trial</a>
@@ -298,32 +325,21 @@ a:hover {
 					<div class="pricing-cell">
 						<h4><span>2</span> Events a month</h4>
 					</div>
-			
-					<div class="pricing-cell">
-						
+
+					<div class="features2">
 						<ul>
-							<li><i class=""></i><span>1000</span> Profile
-							</li>
-
-							<li><i class="tooltip-top" data-tooltip="Schedule as many posts as you need with Buffer for Business. No more queue limits means less time managing your social media schedule!"></i><span>3000</span> total emails a month
-							</li>
-
-							<li><i class="tooltip-top" data-tooltip="Schedule as many posts as you need with Buffer for Business. No more queue limits means less time managing your social media schedule!"></i><span>Custom</span> Url
-							</li>
+							<li><p>Manage up to <span>1000</span> profiles</p></li>
+							<li><p><span>3000</span> email credits per month</p></li>
+							<li><p><span>Custom</span> Url</p></li>
 						</ul>
-						
-
 					</div>
-
-					
-
-
+			
 				</div>
 
 				<div class="pricing-table-column" style=" width: 25%">
 					<div class="pricing-cell pricing-cell--header">
 						<h3><strong>Organiser</strong></h3>
-						<p>Best for large events and tradeshows, who plan events in advance</p>
+						<p>Best for large events and tradeshows.</p>
 						<div class="pricing-table--price"><span>$149</span> per month</div>
 						<br><br>
 						<a class="btn btn-default" href="#" role="button">Start Your Free 14-Day Trial</a>
@@ -337,45 +353,28 @@ a:hover {
 						<h4><span>Unlimited</span> Events a month</h4>
 					</div>
 
-					<div class="pricing-cell">
 
-						<h5><span>7000</span> Profiles</h5>
-
-						<h5><span>20000</span> total emails a month</h5>
-
-						<h5><span>Custom</span> Url</h5>
-
-						<h5><span>Remove</span> EventNinja Branding</h5>
-													
-
+					<div class="features3">
+						<ul>
+							<li><p>Manage up to <span>7000</span> profiles</p></li>
+							<li><p><span>20,000</span> email credits per month</p></li>
+							<li><p><span>Custom</span> Url</p></li>
+							<li><p><span>Remove</span> EventNinja Branding</p></li>
+						</ul>
 					</div>
-
-
 			</div>
 			
 				<div class="pricing-table-column" style=" width: 25%">
-					<div class="pricing-cell pricing-cell--header">
+					<div class="pricing-cell">
 						<h3><strong>Expo</strong></h3>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<p>Need more events, more capacity or want a quote? Contact us</p>
-						<br>
-						<br>
-						<br>
-						<br><br>
-						<br><br>
+					
+						<p>Need more events, more capacity or want a quote? </p>
+
+						<a class="btn btn-default" href="#" role="button">Contact Us</a>
 					</div>					
 				</div>
 			
-		<div class="notification white nonprofit" >
-			<p>.</p>
-		</div>
+	
 	</div>
 
 		</div>
