Table nearly complete

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -244,6 +244,9 @@ a:hover {
   border-bottom: 1px solid #ced7df;
 }
 
+.pricing-cell.expo {
+  border-bottom: 1px solid #fefefe;
+}
 </style>
 
 <div class="section first">
@@ -259,7 +262,7 @@ a:hover {
 			</div>
 
 			<div class="fade-in one">
-				<h1>Optimize your event marketing</h1>
+				<h1>Built to Optimize Your Event Marketing</h1>
 			</div>
 
 			<h2 class="subtitle fade-in two">The <strong>best</strong> way to <strong>increase</strong> your purchasing powering when liaising with sponsors; boost your bottom line and make smarter decisions.</h2>
@@ -274,7 +277,7 @@ a:hover {
 	<div class="row">
 		<div class="medium-11 medium-centered columns text-center">
 
-		<p class="bottom_bar"><strong>Start your 14-day unlimited free trial.</strong> No obligation, no credit card required.</p>
+		<p class="bottom_bar"><strong>Start your 30-day unlimited free trial.</strong> No obligation, no credit card required.<br> <br> Choose the plan that works best for you.</p>
 
 			<div class="pricing clearfix">
 		<div class="pricing-table clearfix">
@@ -283,10 +286,10 @@ a:hover {
 			<div class="pricing-table-column" style=" width: 25%">
 					<div class="pricing-cell pricing-cell-header">
 						<h3><strong>Basic</strong></h3>
-						<p>Best for the casual product explorer.</p>
+						<p>Best for the curious product explorer.</p>
 						<div class="pricing-table--price"><span>Free</span></div>
 						<br><br>
-						<a class="btn btn-default" href="#" role="button">Start Your Free 14-Day Trial</a>
+						<a class="btn btn-default" href="#" role="button">Start Your Free 30-Day Trial</a>
 					</div>
 
 					<div class="pricing-cell">
@@ -294,7 +297,7 @@ a:hover {
 					</div>
 
 					<div class="pricing-cell">
-						<h4><span>1</span> Events a month</h4>
+						<h4><span>1</span> Event a month</h4>
 					</div>
 					
 					<div class="features1">
@@ -315,7 +318,7 @@ a:hover {
 						<p>Best for the casual meetup events.</p>
 						<div class="pricing-table--price"><span>$49</span> per month</div>
 						<br><br>
-						<a class="btn btn-default" href="#" role="button">Start Your Free 14-Day Trial</a>
+						<a class="btn btn-default" href="#" role="button">Start Your Free 30-Day Trial</a>
 					</div>
 
 					<div class="pricing-cell">
@@ -342,7 +345,7 @@ a:hover {
 						<p>Best for large events and tradeshows.</p>
 						<div class="pricing-table--price"><span>$149</span> per month</div>
 						<br><br>
-						<a class="btn btn-default" href="#" role="button">Start Your Free 14-Day Trial</a>
+						<a class="btn btn-default" href="#" role="button">Start Your Free 30-Day Trial</a>
 					</div>
 
 					<div class="pricing-cell">
@@ -365,9 +368,10 @@ a:hover {
 			</div>
 			
 				<div class="pricing-table-column" style=" width: 25%">
-					<div class="pricing-cell">
+					<div class="pricing-cell expo">
 						<h3><strong>Expo</strong></h3>
-					
+						<br>
+						<br><br><br><br><br><br>
 						<p>Need more events, more capacity or want a quote? </p>
 
 						<a class="btn btn-default" href="#" role="button">Contact Us</a>
@@ -386,32 +390,47 @@ a:hover {
 	<div class="row">
 		<div class="medium-10 large-9 medium-centered columns text-center">
 
-			<h2 class="bottom_bar">No worries, your data is secure!</h2>
-
-			<p>We will connect your Stripe account through a "read only" permission.</p>
+			<h2 class="bottom_bar">MARKETING TOOLS</h2>
 
 			<div class="row">
-				<div class="medium-4 columns text-center">
-					<div class="security">
-						<img src="assets/visibility-d42e7fd7ccaa925dcb3b9c42264a4ff09c57d1fa898c2ecf333bae52e12a387b.png" alt="Visibility d42e7fd7ccaa925dcb3b9c42264a4ff09c57d1fa898c2ecf333bae52e12a387b" />
-						<p>We <strong>CANNOT</strong> create or manage your Stripe account.</p>
-					</div>
+		
+				<div class="medium-6 columns text-left">
+					<h5>PEOPLE ANALYTICS</h5>
+
+					<h4>It's time to get to know your attendees.</h4>
+
+					<p>A fully integrated system for managing and maintaining interactions with attendees.</p>
+
+					<ul>
+						<li>Easily add, merge, tag and export attendees</li>
+						<li>View attendees profile history</li>
+						<li>Create and manage lists</li>
+						<li>Access and save queries</li>
+						<li>Access Full Contact API</li>
+
+
+					</ul>
 				</div>
-				<div class="medium-4 columns text-center">
-					<div class="security">
-						<img src="assets/money-6c1c7029e087a75876c9d93c75bb78d746b218884d037298edb71eb58b32cd09.png" alt="Money 6c1c7029e087a75876c9d93c75bb78d746b218884d037298edb71eb58b32cd09" />
-						<p>We <strong>CANNOT</strong> transfer money or create transactions.</p>
-					</div>
-				</div>
-				<div class="medium-4 columns text-center">
-					<div class="security">
-						<img src="assets/download-b869392628a9c65e15fe2dc0b70ed585e72232aa7c89482e50b7b6f6aaa9dcb1.png" alt="Download b869392628a9c65e15fe2dc0b70ed585e72232aa7c89482e50b7b6f6aaa9dcb1" />
-						<p>We can <strong>ONLY</strong> read data from your Stripe account.</p>
-					</div>
+
+			
+
+				<div class="medium-6 columns text-left">
+					<h5>COMMUNICATION MANAGER</h5>
+
+					<h4>Get personal. Send them a message.</h4>
+
+					<p>Empower your marketing team to take action on what they learn. </p>
+
+					<ul>
+						<li>Design and send custom event communications - from RSVP to reminder</li>
+						<li>Purchase additional email credits</li>
+						<li>Email scheduling</li>
+						<li>Email analytics*</li>
+					</ul>
 				</div>
 			</div>
 
-			<p>If at any point you decide to stop using EasyRetention, you can revoke our access from within Stripe, or delete your EasyRetention account entirely (and your data too).</p>
+			<p>EventNinja ties data to people who attend your events to see who they are. Query groups of attendees with similar activity profiles, improve your events by following along as people experience it, or send attendees a message to get their feedback.</p>
 
 		</div>
 	</div>
@@ -422,16 +441,46 @@ a:hover {
 	<div class="row">
 		<div class="medium-10 large-8 medium-centered columns text-center">
 
-			<h2 class="bottom_bar">Pricing as it should be.</h2>
+			<h2 class="bottom_bar">SALES ANALYTICS</h2>
 
-			<!-- p>We hate complicated pricing structures.<br>That's why we decided to use a flat pricing:</p -->
+			<div class="row">
+		
+				<div class="medium-6 columns text-left">
+					<h5>RETENTION REPORTS</h5>
 
-			<div class="pricing">
-				<span>$49</span>/month
+					<h4>See the full picture with retention.</h4>
+
+					<p>Visualise how often your attendees return and engage with your events.</p>
+
+					<ul>
+						<li>Easily add, merge, tag and export attendees</li>
+						<li>Find specific people based on unqiue criteria</li>
+						<li>View attendees profile history</li>
+						<li>Create and manage lists</li>
+						<li>Access and save queries</li>
+						<li>Access Full Contact API</li>
+
+
+					</ul>
+				</div>
+
+			
+
+				<div class="medium-6 columns text-left">
+					<h5>REVENUE REPORTS</h5>
+
+					<h4>Know where your money is best spent.</h4>
+
+					<p>Empower your marketing team to take action on what they learn. </p>
+
+					<ul>
+						<li>Design and send custom event communications - from RSVP to reminder</li>
+						<li>Purchase additional email credits</li>
+						<li>Email scheduling</li>
+						<li>Email analytics*</li>
+					</ul>
+				</div>
 			</div>
-
-			<p class="money_back">Risk free, <strong>60-days free trial!</strong></p>
-			<p class="business_plan"><strong>*</strong>Business plan is coming soon</p>
 
 		</div>
 	</div>
