--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -259,6 +259,22 @@ a:hover {
   display: inline-block;
 }
 
+.logo {
+  text-transform: uppercase;
+  font-size: 1.2em;
+  letter-spacing: -1px;
+  font-weight: 300;
+  margin-bottom: 15px;
+  color: #f1f1f1;
+}
+
+h2.subtitle {
+  font-weight: 300;
+  font-size: 1.4em;
+  line-height: 1.6;
+  margin-bottom: 18px;
+}
+
 </style>
 
 <div class="section first">
