bundle install, all ready to push to heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Eventninjapricing</title>
+  <title>EventNinja pricing</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>EasyRetention</title>
+  <title>EventNinja Pricing</title>
   <link rel="stylesheet" media="all" href="assets/application-6391dd42ab241066df8be6b101f0c4b2769dbbb9e3edcc01811268b99662c7d5.css" data-turbolinks-track="true" />
   <script src="assets/application-744feb58c517097a41b7e0e121dd6e8316249f645d49af1e203d3164794489e5.js" data-turbolinks-track="true"></script>
 
   <meta name="description" content="Re-engage your lost customers on Stripe.">
-  <meta name="keywords" content="stripe, saas, retention, churn rate" />
   <link rel="shortcut icon" type="image/png" href="ER_twitter.png"/>
 
   <!-- Viewport meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="EasyRetention.com">
+  <meta name="apple-mobile-web-app-title" content="EventNinja.io">
 
   <!-- OpenGraph Meta -->
-  <meta property="og:site_name" content="EasyRetention"/>
+  <meta property="og:site_name" content="EventNinja"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:description" content="Re-engage your lost customers on Stripe."/>
-  <meta property="og:url" content="http://www.easyretention.com"/>
-  <meta property="og:title" content="EasyRetention - The sexy way to re-engage your lost customers."/>
+  <meta property="og:description" content="The most advanced data-driven event platform in the world."/>
+  <meta property="og:url" content="http://www.eventninja.io"/>
+  <meta property="og:title" content="EventNinja - The most advanced data-driven event platform in the world."/>
   <meta property="og:image" content="ER_twitter.png"/>
   
   <!-- IE Fix for HTML5 Tags -->
