bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -320,7 +320,8 @@ h2.subtitle {
 
 
 
-			<div class="pricing clearfix">
+	<div class="pricing clearfix">
+
 		<div class="pricing-table clearfix">
 
 
@@ -418,9 +419,79 @@ h2.subtitle {
 						<a class="btn btn-default" href="#" role="button">Contact Us</a>
 					</div>					
 				</div>
-			
 	
 	</div>
+
+	<!-- One time -->
+
+	<div class="pricing clearfix">
+	
+		<div class="pricing-table clearfix">
+
+
+
+			<div class="pricing-table-column" style=" width: 50%">
+					<div class="pricing-cell pricing-cell--header">
+						<h3><strong>Planner</strong></h3>
+						<p>Best for the casual meetup events.</p>
+						<div class="pricing-table--price"><span>$59 </span>/2 events</div>
+						<br><br>
+						<a class="btn btn-default" href="#" role="button">30 Day Money Back Guarantee, Start Now</a>
+					</div>
+
+					<div class="pricing-cell">
+						<h4><span>1</span> User</h4>
+					</div>
+
+					<div class="pricing-cell">
+						<h4>Create <span>2</span> Events</h4>
+					</div>
+
+					<div class="features2">
+						<ul>
+							<li><p>Manage up to <span>500</span> profiles</p></li>
+							<li><p><span>1500</span> email credits</p></li>
+							<li><p><span>Custom</span> Url</p></li>
+						</ul>
+					</div>
+			
+				</div>
+
+				<div class="pricing-table-column" style=" width: 50%">
+					<div class="pricing-cell pricing-cell--header">
+						<h3><strong>Organiser</strong></h3>
+						<p>Best for large events and tradeshows.</p>
+						<div class="pricing-table--price"><span>$159 </span>/3 events</div>
+						<br><br>
+						<a class="btn btn-default" href="#" role="button">30 Day Money Back Guarantee, Start Now</a>
+					</div>
+
+					<div class="pricing-cell">
+						<h4><span>3</span> Users</h4>
+					</div>
+
+					<div class="pricing-cell">
+						<h4>Create <span>3</span> Events</h4>
+					</div>
+
+
+					<div class="features3">
+						<ul>
+							<li><p>Manage up to <span>5000</span> profiles</p></li>
+							<li><p><span>15,000</span> email credits per month</p></li>
+							<li><p><span>Custom</span> Url</p></li>
+							<li><p><span>Remove</span> EventNinja Branding</p></li>
+						</ul>
+					</div>
+			</div>
+
+	</div>
+
+	</div>
+
+		<!-- One time end -->
+
+	
 
 		</div>
 	</div>
@@ -621,7 +692,7 @@ h2.subtitle {
 				</div>
 			</form>
 			<p class="mini">PSSST! The first 300 people will get 50% OFF EasyRetention for life!</p>
--->
+-->3
 		</div>
 	</div>
 </div>
