bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -275,6 +275,15 @@ h2.subtitle {
   margin-bottom: 18px;
 }
 
+body {
+  font-family: 'Raleway', 'Proxima Nova', 'Lato', Calibri, Arial, sans-serif;
+  color: #222;
+  height: 100%;
+  font-size: 18px;
+  overflow: hidden;
+  background-color: #fff;
+}
+
 </style>
 
 <div class="section first">
