bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -609,26 +609,31 @@ body {
 		<div class="large-11 medium-centered columns text-center">
 
 			<h2 class="bottom_bar">ADDITIONAL ADD-ONS</h2>
-
+			<br>
+			<br>
 			<div class="row">
 		
 				<div class="medium-3 columns text-center">
+					<i class="fa fa-envelope-o fa-3x"></i>
 					<h5>EMAIL CREDITS</h5>
 					<p>Almost out? Upgrade anytime with flexible options starting at $30 for 1,000 additional email credits.</p>
 				</div>
 
 
 				<div class="medium-3 columns text-center">
+					<i class="fa fa-ticket fa-3x"></i>
 					<h5>EASY TICKETING</h5>
 					<p>Create and sell tickets at your event. A standard fee of 2.0% + £0.5 applies for each ticket sold across all packages.</p>
 				</div>
 
 				<div class="medium-3 columns text-center">
+					<i class="fa fa-check-square-o fa-3x"></i>
 					<h5>CUSTOM FORMS</h5>
 					<p>Ask & analyse all the questions you need for your event with customizable forms and charts.</p>
 				</div>
 
 				<div class="medium-3 columns text-center">
+					<i class="fa fa-cog fa-3x"></i>
 					<h5>WIDGET</h5>
 					<p>Share your events around the web with our Ticket Widgets</p>
 				</div>
