bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -425,7 +425,7 @@ body {
 						<br><br><br><br><br><br>
 						<p>Need more events, more capacity or want a quote? </p>
 
-						<a class="btn btn-default" href="#" role="button">Contact Us</a>
+						<a class="btn btn-default" href="mailto:konnichiwa@eventninja.io" role="button">Contact Us</a>
 					</div>					
 				</div>
 	
@@ -635,7 +635,7 @@ body {
 				<div class="medium-3 columns text-center">
 					<i class="fa fa-cog fa-3x"></i>
 					<h5>WIDGET</h5>
-					<p>Share your events around the web with our Ticket Widgets</p>
+					<p>Share your events around the web with our Ticket Widget.</p>
 				</div>
 
 			</div>
