bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -646,34 +646,34 @@ body {
 
 <div class="section">
 	<div class="row">
-		<div class="medium-10 large-9 medium-centered columns text-center">
+		<div class="medium-10 large-11 medium-centered columns text-center">
 
 			<h2 class="bottom_bar">Frequently Asked Questions</h2>
 
 			<div class="row">
 				<div class="medium-6 columns text-left">
-					<h4>Do I need to have any technical skills?</h4>
-					<p>Nope! You can connect your Stripe account to EasyRetention in one click. Literally. No code necessary.</p>
+					<h4>What do I get in the 30 day free trial?</h4>
+					<p>It’s simple really – you get unlimited access to all the features in the organiser plan, and should you face a problem, have a question, or simply want to talk, we are always there – via email and chat.</p>
 				</div>
 				<div class="medium-6 columns text-left">
-					<h4>Is EasyRetention Secure?</h4>
-					<p>Completely. When you connect EasyRetention to your Stripe account you’re giving us read-only access. All interactions within the app are SSL-encrypted. And we'll never share your information with anyone.</p>
+					<h4>What if my usage goes above my subscription plan limit?</h4>
+					<p>You’ll be notified when that happens. You can choose to upgrade if that works for you. Otherwise, we will contact you and discuss the possible options to meet your business goals. The best option may not necessarily be an upgrade.</p>
 				</div>
 				<div class="medium-6 columns text-left">
-					<h4>Is there a way to get a discount?</h4>
-					<p>Yes. The first 300 people that signup get 50% OFF for life.</p>
+					<h4>What types of payment do you accept?</h4>
+					<p>We accept Stripe and major credit cards for online payment. If you’d like us to accept any form of offline payment, please get in touch with us.</p>
 				</div>
 				<div class="medium-6 columns text-left">
-					<h4>Can I cancel anytime?</h4>
-					<p>Whenever you want. Oh and we also offer 60 days money back guarantee. You are always in full control.</p>
+					<h4>Is my data safe?</h4>
+					<p>We take data security very seriously. All customer data is securely stored in Amazon data centers, and the network design ensures no unauthorized access. All web interactions are encrypted through SSL</p>
 				</div>
 				<div class="medium-6 columns text-left">
-					<h4>Do I need Stripe?</h4>
-					<p>Yes. You need to be using Stripe's Subscription Billing feature. If your subscription billing is handled by a different plugin, we can't do our magic for you.</p>
+					<h4>Who owns my data?</h4>
+					<p>You, of course. It’s your data after all. We want you to use LeadSquared, because you love using it, not because we have held your data “hostage”. You can export all your lead data, email campaign reports & landing page reports from LeadSquared whenever you want.</p>
 				</div>
 				<div class="medium-6 columns text-left">
-					<h4>How does the 60-day money back guarantee work?</h4>
-					<p>If you're not happy with your account and would like your money back, just contact us within the first 60 days and we'll gladly refund your money. Refunds can not be issued after your initial 60 days of use and we don’t prorate for partial months.</p>
+					<h4>Can I upgrade or downgrade my subscription?</h4>
+					<p>You can upgrade anytime. For downgrade, you need to complete the subscription term.</p>
 				</div>
 			</div>
 
