bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -688,7 +688,7 @@ body {
 
 			<div class="row">	
 				<div class="medium-9 medium-centered columns">
-					<h2 class="subtitle"><strong>Start Improving Your Marketing Today</strong></h2>
+					<h2 class="subtitle"><strong>Start Improving Your Event Marketing Today</strong></h2>
 				</div>
 			</div>
 <!--
