bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -515,13 +515,14 @@ body {
 
 			<p>EventNinja ties data to people who attend your events to see who they are and how often they attend. See groups of attendees with similar activity profiles, improve your events by following along as people experience it, or send attendees a message to get their feedback.</p>
 
-
+			<br>
+			<br>
 			<div class="row">
 		
 				<div class="medium-6 columns text-left">
 
-
-					<h5>PEOPLE ANALYTICS</h5>
+					<i class="fa fa-user fa-3x pull-left"></i>
+					<h5 >PEOPLE ANALYTICS</h5>
 
 					<h4>It's time to get to know your attendees.</h4>
 
@@ -541,6 +542,7 @@ body {
 			
 
 				<div class="medium-6 columns text-left">
+					<i class="fa fa-envelope fa-3x pull-left"></i>
 					<h5>COMMUNICATION MANAGER</h5>
 
 					<h4>Get personal. Send them a message.</h4>
@@ -568,10 +570,13 @@ body {
 		<div class="large-11 medium-centered columns text-center">
 
 			<h2 class="bottom_bar">SALES ANALYTICS</h2>
+			<br>
+			<br>
 
 			<div class="row">
 		
 				<div class="medium-6 columns text-left">
+					<i class="fa fa-users fa-3x pull-left"></i>
 					<h5>RETENTION REPORTS</h5>
 
 					<h4>See the full picture with retention.</h4>
@@ -585,6 +590,7 @@ body {
 			
 
 				<div class="medium-6 columns text-left">
+					<i class="fa fa-usd fa-3x pull-left"></i>
 					<h5>REVENUE REPORTS</h5>
 
 					<h4>Know where your money is best spent.</h4>
