bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -453,7 +453,7 @@ body {
 					</div>
 
 					<div class="pricing-cell">
-						<h4>Create <span>2</span> Events</h4>
+						<h4>Create <span>2</span> Events (use anytime)</h4>
 					</div>
 
 					<div class="features2">
@@ -480,7 +480,7 @@ body {
 					</div>
 
 					<div class="pricing-cell">
-						<h4>Create <span>3</span> Events</h4>
+						<h4>Create <span>3</span> Events (use anytime)</h4>
 					</div>
 
 
