bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -559,10 +559,13 @@ body {
 				</div>
 			</div>
 
-			
+<img src="assets/profilemac.png" />		
 		</div>
 	</div>
 </div>
+
+
+
 
 
 <div class="section">
