--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -559,7 +559,7 @@ body {
 				</div>
 			</div>
 
-<!-- <img src="assets/profilemac.png" /> -->	
+<img src="assets/macbooks.png" />
 		</div>
 	</div>
 </div>
