bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -284,6 +284,10 @@ body {
   background-color: #fff;
 }
 
+.macbooks {
+  margin-bottom: -167px;
+}
+
 </style>
 
 <div class="section first">
@@ -344,7 +348,7 @@ body {
 					</div>
 
 					<div class="pricing-cell">
-						<h4><span>1</span> User</h4>
+						<h4><span>1</span> User Accounts</h4>
 					</div>
 
 					<div class="pricing-cell">
@@ -373,7 +377,7 @@ body {
 					</div>
 
 					<div class="pricing-cell">
-						<h4><span>1</span> User</h4>
+						<h4><span>1</span> User Accounts</h4>
 					</div>
 
 					<div class="pricing-cell">
@@ -400,7 +404,7 @@ body {
 					</div>
 
 					<div class="pricing-cell">
-						<h4><span>3</span> Users</h4>
+						<h4><span>3</span> Users Accounts</h4>
 					</div>
 
 					<div class="pricing-cell">
@@ -449,7 +453,7 @@ body {
 					</div>
 
 					<div class="pricing-cell">
-						<h4><span>1</span> User</h4>
+						<h4><span>1</span> User Accounts</h4>
 					</div>
 
 					<div class="pricing-cell">
@@ -476,13 +480,12 @@ body {
 					</div>
 
 					<div class="pricing-cell">
-						<h4><span>3</span> Users</h4>
+						<h4><span>3</span> Users Accounts</h4>
 					</div>
 
 					<div class="pricing-cell">
 						<h4>Create <span>3</span> Events (use anytime)</h4>
 					</div>
-
 
 					<div class="features3">
 						<ul>
@@ -559,7 +562,10 @@ body {
 				</div>
 			</div>
 
-<img src="assets/macbooks.png" />
+<div class="macbooks">
+	<img src="assets/macbooks.png" />
+</div>			
+
 		</div>
 	</div>
 </div>
