--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -344,7 +344,7 @@ body {
 						<p>Best for the curious product explorer.</p>
 						<div class="pricing-table--price"><span>Free</span></div>
 						<br><br>
-						<a class="btn btn-default" href="#" role="button">Start Your Free 30-Day Trial</a>
+						<a class="btn btn-default" href="#" role="button">Pay with a tweet</a>
 					</div>
 
 					<div class="pricing-cell">
@@ -369,8 +369,8 @@ body {
 
 			<div class="pricing-table-column" style=" width: 25%">
 					<div class="pricing-cell pricing-cell--header">
-						<h3><strong>Planner</strong></h3>
-						<p>Best for the casual meetup events.</p>
+						<h3><strong>Casual</strong></h3>
+						<p>Best for the casual event creator.</p>
 						<div class="pricing-table--price"><span>$49</span> per month</div>
 						<br><br>
 						<a class="btn btn-default" href="#" role="button">Start Your Free 30-Day Trial</a>
@@ -396,8 +396,8 @@ body {
 
 				<div class="pricing-table-column" style=" width: 25%">
 					<div class="pricing-cell pricing-cell--header">
-						<h3><strong>Organiser</strong></h3>
-						<p>Best for large events and tradeshows.</p>
+						<h3><strong>Regular</strong></h3>
+						<p>Best for the regular meetup events.</p>
 						<div class="pricing-table--price"><span>$149</span> per month</div>
 						<br><br>
 						<a class="btn btn-default" href="#" role="button">Start Your Free 30-Day Trial</a>
@@ -417,17 +417,18 @@ body {
 							<li><p>Manage up to <span>7000</span> profiles</p></li>
 							<li><p><span>20,000</span> email credits per month</p></li>
 							<li><p><span>Custom</span> Url</p></li>
-							<li><p><span>Remove</span> EventNinja Branding</p></li>
+							<li><p><span>Whitelabel</span></p></li>
 						</ul>
 					</div>
 			</div>
 			
 				<div class="pricing-table-column" style=" width: 25%">
 					<div class="pricing-cell expo">
-						<h3><strong>Expo</strong></h3>
+						<h3><strong>Custom</strong></h3>
+						<p> Best for organisers who want a bit extra.</p>
 						<br>
 						<br><br><br><br><br><br>
-						<p>Need more events, more capacity or want a quote? </p>
+						<p>Need more capacity or want a quote?</p>
 
 						<a class="btn btn-default" href="mailto:konnichiwa@eventninja.io" role="button">Contact Us</a>
 					</div>					
@@ -443,11 +444,11 @@ body {
 
 
 
-			<div class="pricing-table-column" style=" width: 50%">
+			<div class="pricing-table-column" style=" width: 33.33%">
 					<div class="pricing-cell pricing-cell--header">
-						<h3><strong>Planner</strong></h3>
-						<p>Best for the casual meetup events.</p>
-						<div class="pricing-table--price"><span>$59 </span>/2 events</div>
+						<h3><strong>Small</strong></h3>
+						<p>Best for the one off event.</p>
+						<div class="pricing-table--price"><span>$59 </span>/1 events</div>
 						<br><br>
 						<a class="btn btn-default" href="#" role="button">30 Day Money Back Guarantee, Start Now</a>
 					</div>
@@ -457,7 +458,7 @@ body {
 					</div>
 
 					<div class="pricing-cell">
-						<h4>Create <span>2</span> Events (use anytime)</h4>
+						<h4>Create <span>1</span> Event (use anytime)</h4>
 					</div>
 
 					<div class="features2">
@@ -470,10 +471,10 @@ body {
 			
 				</div>
 
-				<div class="pricing-table-column" style=" width: 50%">
+				<div class="pricing-table-column" style=" width: 33.33%">
 					<div class="pricing-cell pricing-cell--header">
-						<h3><strong>Organiser</strong></h3>
-						<p>Best for large events and tradeshows.</p>
+						<h3><strong>Medium</strong></h3>
+						<p>Best for the regular medium size events.</p>
 						<div class="pricing-table--price"><span>$159 </span>/3 events</div>
 						<br><br>
 						<a class="btn btn-default" href="#" role="button">30 Day Money Back Guarantee, Start Now</a>
@@ -492,10 +493,22 @@ body {
 							<li><p>Manage up to <span>5000</span> profiles</p></li>
 							<li><p><span>15,000</span> email credits per month</p></li>
 							<li><p><span>Custom</span> Url</p></li>
-							<li><p><span>Remove</span> EventNinja Branding</p></li>
+							<li><p><span>Whitelabel</span></p></li>
 						</ul>
 					</div>
-			</div>
+				</div>
+
+				<div class="pricing-table-column" style=" width: 33.33%">
+					<div class="pricing-cell expo">
+						<h3><strong>Expo</strong></h3>
+						<p> Best for large events, conferences & tradeshows.</p>
+						<br>
+						<br><br><br><br><br><br>
+						<p>Need more capacity or want a quote?</p>
+
+						<a class="btn btn-default" href="mailto:konnichiwa@eventninja.io" role="button">Contact Us</a>
+					</div>					
+				</div>
 
 	</div>
 
