bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -288,6 +288,10 @@ body {
   margin-bottom: -167px;
 }
 
+.pricing-cell.expo {
+  padding-bottom: 172px;
+}
+
 </style>
 
 <div class="section first">
@@ -370,7 +374,7 @@ body {
 			<div class="pricing-table-column" style=" width: 25%">
 					<div class="pricing-cell pricing-cell--header">
 						<h3><strong>Casual</strong></h3>
-						<p>Best for the casual event creator.</p>
+						<p>Best for the casual event <br>creator.</p>
 						<div class="pricing-table--price"><span>$49</span> per month</div>
 						<br><br>
 						<a class="btn btn-default" href="#" role="button">Start Your Free 30-Day Trial</a>
@@ -427,7 +431,7 @@ body {
 						<h3><strong>Custom</strong></h3>
 						<p> Best for organisers who want a bit extra.</p>
 						<br>
-						<br><br><br><br><br><br>
+						<br><br><br><br><br>
 						<p>Need more capacity or want a quote?</p>
 
 						<a class="btn btn-default" href="mailto:konnichiwa@eventninja.io" role="button">Contact Us</a>
@@ -503,7 +507,7 @@ body {
 						<h3><strong>Expo</strong></h3>
 						<p> Best for large events, conferences & tradeshows.</p>
 						<br>
-						<br><br><br><br><br><br>
+						<br><br><br><br>
 						<p>Need more capacity or want a quote?</p>
 
 						<a class="btn btn-default" href="mailto:konnichiwa@eventninja.io" role="button">Contact Us</a>
