bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -429,7 +429,7 @@ body {
 				<div class="pricing-table-column" style=" width: 25%">
 					<div class="pricing-cell expo">
 						<h3><strong>Custom</strong></h3>
-						<p> Best for organisers who want a bit extra.</p>
+						<p> Best for organisers who want a bit more.</p>
 						<br>
 						<br><br><br><br><br>
 						<p>Need more capacity or want a quote?</p>
