bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -348,7 +348,7 @@ body {
 						<p>Best for the curious product explorer.</p>
 						<div class="pricing-table--price"><span>Free</span></div>
 						<br><br>
-						<a class="btn btn-default" href="#" role="button">Pay with a tweet</a>
+						<a class="btn btn-default" href="#" role="button">Pay With A Tweet</a>
 					</div>
 
 					<div class="pricing-cell">
