bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -553,7 +553,7 @@ body {
 						<li>View attendees profile history</li>
 						<li>Create and manage lists</li>
 						<li>Access and save queries</li>
-						<li>Access Full Contact API</li>
+						<li>Get a complete picture of your attendees, turning your partial data (email) in to information you can use (job title, company, age, social accounts etc).</li>
 
 
 					</ul>
